# CryptoTool

./: CMakeLists.txt  CryptoTool.ini  CryptoTool.rc  LICENSE  README.md  common.c  common.h  convertWindow.c  digestWindow.c  encode.c  encode.h  endec.c  endec.h  main.c  mainWindow.c  mainWindow.h  randomWindow.c  resource.h  symmWindow.c  utils.c  utils.h
openssl/: .gitignore  README.md
resource/: CryptoTool.ini  CryptoTool.manifest  CryptoTool.rc
